--- a/index.html
+++ b/index.html
@@ -309,7 +309,9 @@
                   <h2 class="result-title">Scan Successful</h2>
                   <button class="copy-btn" aria-label="Copy QR code" title="Copy QR code">📋 Copy</button>
                 </div>
-                <pre class="result-data" tabindex="0" role="region" aria-label="QR code content">${code.data}</pre>
+                ${/^https?:\/\//i.test(code.data)
+                  ? `<div class="result-data"><a href="${code.data}" target="_blank" rel="noopener">${code.data}</a></div>`
+                  : `<pre class="result-data" tabindex="0" role="region" aria-label="QR code content">${code.data}</pre>`}
                 <span class="copy-feedback" aria-live="assertive"></span>
               </div>
             `;
@@ -395,7 +397,9 @@
             <h2 class="result-title">Scan Successful</h2>
             <button class="copy-btn" aria-label="Copy QR code" title="Copy QR code">📋 Copy</button>
           </div>
-          <pre class="result-data" tabindex="0" role="region" aria-label="QR code content">${text}</pre>
+          ${/^https?:\/\//i.test(text)
+            ? `<div class="result-data"><a href="${text}" target="_blank" rel="noopener">${text}</a></div>`
+            : `<pre class="result-data" tabindex="0" role="region" aria-label="QR code content">${text}</pre>`}
           <span class="copy-feedback" aria-live="assertive"></span>
         </div>
       `;
